--- a/html/html_web_page.html
+++ b/html/html_web_page.html
@@ -63,7 +63,7 @@
 
     <div class= "grid-container welcome">
         <div id="wel_img" >
-            <img src="/images/interier_design.jpeg" alt="interior design "  >
+            <img src=" " alt="interior design "  >
         </div>
         <div id="wel_txt" class="float-child">
             <h1> WELCOME</h1>
@@ -109,18 +109,7 @@
         </div>
 
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
+    
     <div id="hire_me_form_container">
         <div class="form_content">
         <h1 class="form_title"> HIRE ME NOW </h1>
