--- a/html/html_web_page.html
+++ b/html/html_web_page.html
@@ -63,7 +63,7 @@
 
     <div class= "grid-container welcome">
         <div id="wel_img" >
-            <img src=" " alt="interior design "  >
+            <img src="/images/interior_design.jpg" alt="interior design "  >
         </div>
         <div id="wel_txt" class="float-child">
             <h1> WELCOME</h1>
